Bug 427974 - Crashed in Attica::ProviderManager::fileFinished() when trying to update
Summary: Crashed in Attica::ProviderManager::fileFinished() when trying to update
Status: RESOLVED FIXED
Alias: None
Product: frameworks-attica
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.75.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Frederik Gladhorn
URL:
Keywords:
: 428930 429856 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-10-19 13:03 UTC by Mohammed
Modified: 2020-12-03 19:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.77
Sentry Crash Report:


Attachments
Discover crash (14.25 KB, text/vnd.kde.kcrash-report)
2020-10-19 13:03 UTC, Mohammed
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mohammed 2020-10-19 13:03:42 UTC
Created attachment 132560 [details]
Discover crash

SUMMARY
when we run discover or press the button updates ,it is crush

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Archlinux
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-10-21 03:14:13 UTC
[KCrash Handler]
#4  0x00007f5aa5114510 in QNetworkReply::error() const () at /usr/lib/libQt5Network.so.5
#5  0x00007f5aa549adbb in Attica::ProviderManager::fileFinished(QString const&) () at /usr/lib/libKF5Attica.so.5
Comment 2 Dan Leinir Turthra Jensen 2020-10-21 12:23:00 UTC
Looking at this code, it's got to be something changed somewhere not in Attica, because that code hasn't changed since 2018... But, it /does/ crash in Attica, and the code is fairly obviously a bit dangerous, so whatever the cause for this suddenly showing up, the fix goes in Attica. MR coming momentarily :)
Comment 3 Bug Janitor Service 2020-10-21 12:38:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/attica/-/merge_requests/5
Comment 4 Dan Leinir Turthra Jensen 2020-11-10 17:03:02 UTC
*** Bug 428930 has been marked as a duplicate of this bug. ***
Comment 5 Dan Leinir Turthra Jensen 2020-11-10 17:04:09 UTC
Git commit 6671bc539d42d8e3736190a5fa30203e3e850f2a by Dan Leinir Turthra Jensen.
Committed on 10/11/2020 at 17:01.
Pushed by leinir into branch 'master'.

Fix crash in provider loading by checking reply pointer before deref

This code has been working for ages, but somehow has started crashing
pretty hard. Consequently, time for a fix! Thanks to Mohammed for
spotting this.

M  +9    -5    src/providermanager.cpp

https://invent.kde.org/frameworks/attica/commit/6671bc539d42d8e3736190a5fa30203e3e850f2a
Comment 6 Dan Leinir Turthra Jensen 2020-12-03 14:32:13 UTC
*** Bug 429856 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2020-12-03 19:37:46 UTC
*** Bug 429939 has been marked as a duplicate of this bug. ***