Fix crash in provider loading by checking reply pointer before deref

This code has been working for ages, but somehow has started crashing
pretty hard. Consequently, time for a fix! Thanks to Mohammed for
spotting this.

BUG:427974